# osal

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  FORMATTING.md  README.md  automate.sh  module.yml  rename.sh  rename_to_snake_case.sh  update_includes.sh
.github/workflows/: ci.yml  cmake.yml
ci/: README.md  clang-tidy.sh  debug.sh  format-check.sh  install.sh  release.sh  zephyr.sh
cmake/: FindUnity.cmake  OsalConfig.cmake.in  README.md  ScaffoldProject.pc.in  ScaffoldProjectConfig.cmake.in  libscaffold.pc.in  libscaffoldConfig.cmake.in  osal-config-release.cmake  osal-config.cmake  osalConfig.cmake.in
example/: CMakeLists.txt  README.md  example.c  example_embedded.c  osal_example.c
inc/: os_chrono.h  os_memory.h  os_mutex.h  os_socket.h  os_stream.h  os_thread.h  os_timer.h  osal.h
include/libscaffold/: libscaffold.h  libscaffoldTypes.h  libscaffold_types.h
include/osal/: os_memory.h  os_socket.h  osal.h  osalEventFlags.h  osalMemory.h  osalMessageQueue.h  osalMutex.h  osalSemaphore.h  osalThread.h  osalTime.h  osalTypes.h  osal_event_flags.h  osal_memory.h  osal_message_queue.h  osal_mutex.h  osal_semaphore.h  osal_thread.h  osal_time.h  osal_types.h
include/scaffold_project/: scaffold_project.h  scaffold_project_types.h
scripts/: add_upstream.sh  check_toolchain.sh  format.sh  migration.sh  new_module.sh
src/: CMakeLists.txt  libscaffold.c  libscaffoldInternal.c  libscaffold_int.c  os_chrono.cpp  os_memory.cpp  os_memory.hpp  os_socket.cpp  os_socket.hpp  os_stream.cpp  os_stream.hpp  os_thread.cpp  os_thread.hpp  os_timer.cpp  os_timer.hpp  osal.c  osalInternal.c  scaffold_project.c  scaffold_project_int.c
src/freertos/: osalEventFlags.c  osalMessageQueue.c  osalMutex.c  osalSemaphore.c  osalThread.c  osalTime.c  osal_event_flags.c  osal_memory.c  osal_message_queue.c  osal_mutex.c  osal_semaphore.c  osal_thread.c  osal_time.c
src/macos/: osal_event_flags.c  osal_memory.c  osal_message_queue.c  osal_mutex.c  osal_semaphore.c  osal_thread.c  osal_time.c
src/posix/: osalEventFlags.c  osalMessageQueue.c  osalMutex.c  osalSemaphore.c  osalThread.c  osalTime.c  osal_event_flags.c  osal_memory.c  osal_message_queue.c  osal_mutex.c  osal_semaphore.c  osal_thread.c  osal_time.c
src/zephyr/: osalEventFlags.c  osalMemory.c  osalMessageQueue.c  osalMutex.c  osalSemaphore.c  osalThread.c  osalTime.c  osal_event_flags.c  osal_memory.c  osal_message_queue.c  osal_mutex.c  osal_semaphore.c  osal_thread.c  osal_time.c
templates/workflows/: format-check.yml  static-analysis.yml
test/: CMakeLists.txt  README.md  README_TESTING.md  main.cpp  main.h  test_freertos.c  test_libscaffold.c  test_osal.c  test_posix.c  test_scaffold_project.c
zephyr/: CMakeLists.txt  Kconfig
